@@ -1,3 +1,8 @@
+2007-06-26  Akim Demaille  <demaille@gostai.com>
+
+	* src/parser/bison/ugrammar.y (variables): Rename as...
+	(names): this.
+
 2007-06-22  Akim Demaille  <demaille@gostai.com>
 
 	purevariable|variable -> name
